--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
   </section>
  <!-- ===== TABLA NUTRICIONAL ===== -->
    <h2>Información sobre los ingredientes de nuestros platillos</h2>
-   <img src=""
+   <img src="https://scontent-bog2-2.xx.fbcdn.net/v/t39.30808-6/572379808_2960866760790512_8444735424152671011_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=127cfc&_nc_eui2=AeFxa3-BF3ZhmRFMOpTMOzpeo_m8Q710ja6j-bxDvXSNrn8Yvfvf5ygmTDzbwB0pRZMnrUjPXeN_A96JlCHcYLjs&_nc_ohc=SF9AAapfiFsQ7kNvwFFqooO&_nc_oc=Adl9mfMYtLCFlN3UPrM4oq6z2VW-i6ZnYHrDp1LQNgCJ93AWxPTShdkh1CTJNAJEo3Y&_nc_zt=23&_nc_ht=scontent-bog2-2.xx&_nc_gid=DxOd5l0Har4fidTJHYf8dA&oh=00_AffpZqjUOIuRbAU1qySool63SWbqjdhewLMciN5BUZZ0rA&oe=690A3569"
   <!-- ===== FOOTER ===== -->
   <footer>
     <p>© 2025 Sakura Air - Todos los derechos reservados</p>
